@@ -2,6 +2,7 @@
 + added support for MPEGLAYER3WAVEFORMAT structure
 + added support for MPEG1WAVEFORMAT structure
 + BITMAPINFOHEADER::biCompression is now also displayed as fourCC string
++ added property page for IAMBufferNegotiation interface
 
 [0.2.9.0 - Beta	   5/October/2008]
 + added MEDIASUBTYPE_NV12 to the list of uncompressed video subtypes
